syntax = "proto3";

package proto;

option java_package = "org.pinak.sub.model";
option java_outer_classname = "ScheduleSyncResponseProto";

message ScheduleSyncResponse {

  message Schedule {
 	int64 scheduleId  = 1;
  	int64 schStartDate = 2;
  	int64 schEndDate = 3;
  	int64 amsId = 4;
  	string processId = 5;
  	string processTitle =6;
  	int64 managerId = 7;
  	string managerUsername = 8;
  	string createdOn = 9;
  	string updatedOn = 10;

 	 message Operators {
    	int64 userId = 1;
    	string username = 2;
     }
  repeated Operators operators = 11;
}
  repeated Schedule schedule = 1;
}