syntax = "proto3";

package proto;

option java_package = "com.pinak.pub.model";
option java_outer_classname = "ResponseMessageProto";

message ResponseMessage {
   string message = 1;
}
